feat: correcao de atribuição

--- a/notebooks/01_tratamento_dados.ipynb
+++ b/notebooks/01_tratamento_dados.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "id": "560a7619",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "id": "228bad16",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
        "(467, 2)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "id": "e21e520a",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "id": "49d4fb53",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
          "type": "float"
         }
        ],
-       "ref": "bb2139ac-6fee-4063-8c39-48b62ca2fdf8",
+       "ref": "fec2491f-580b-4b88-8da7-51461293781f",
        "rows": [
         [
          "0",
@@ -484,13 +484,13 @@
        "[467 rows x 2 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['periodo'].astype(str)\n",
+    "df['periodo'] = df['periodo'].astype(str)\n",
     "df['periodo'] = pd.to_datetime(df['periodo'], dayfirst=True)\n",
     "#transformando df['periodo'] em datetime\n",
     "df"
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "id": "b03f9420",
    "metadata": {},
    "outputs": [
@@ -525,7 +525,7 @@
          "type": "integer"
         }
        ],
-       "ref": "f6b01380-4899-46c7-9e28-e75a32ec95e4",
+       "ref": "a51033c4-a203-49d7-ba06-6949e8b24b1f",
        "rows": [
         [
          "False",
@@ -543,7 +543,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "id": "c7cce619",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
        "Length: 467, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "id": "c5dfe9ec",
    "metadata": {},
    "outputs": [
@@ -613,7 +613,7 @@
          "type": "integer"
         }
        ],
-       "ref": "f6673b61-58f4-4e2c-a88b-b053662c14c6",
+       "ref": "adac6287-bfb4-4d24-97f0-e90e834bf2fe",
        "rows": [
         [
          "False",
@@ -631,7 +631,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "id": "5f580765",
    "metadata": {},
    "outputs": [
@@ -670,7 +670,7 @@
          "type": "float"
         }
        ],
-       "ref": "21848478-429c-431b-8512-c933ea6496b7",
+       "ref": "8ac2d67e-0410-4b12-9b25-1743c856bc0f",
        "rows": [
         [
          "0",
@@ -893,7 +893,7 @@
        "Name: valor, Length: 467, dtype: float64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "id": "308f6bd9",
    "metadata": {},
    "outputs": [
@@ -943,7 +943,7 @@
        "        0.36,  0.43,  0.44,  0.83,  1.14,  1.01])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "id": "4398a4c5",
    "metadata": {},
    "outputs": [
@@ -973,7 +973,7 @@
          "type": "integer"
         }
        ],
-       "ref": "67ad7fbd-dcaf-46d8-9006-9e75b507afbd",
+       "ref": "d21d6e88-3893-482c-9254-71b369231b99",
        "rows": [
         [
          "False",
@@ -991,7 +991,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "id": "3766a593",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "id": "137051c3",
    "metadata": {},
    "outputs": [],
