--- a/notebooks/01_tratamento_dados.ipynb
+++ b/notebooks/01_tratamento_dados.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "560a7619",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "228bad16",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
        "(467, 2)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "e21e520a",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "49d4fb53",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
          "type": "float"
         }
        ],
-       "ref": "fec2491f-580b-4b88-8da7-51461293781f",
+       "ref": "11c5a093-d03d-41d7-9237-023e04c27b21",
        "rows": [
         [
          "0",
@@ -484,7 +484,7 @@
        "[467 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "b03f9420",
    "metadata": {},
    "outputs": [
@@ -525,7 +525,7 @@
          "type": "integer"
         }
        ],
-       "ref": "a51033c4-a203-49d7-ba06-6949e8b24b1f",
+       "ref": "a8c07fec-205d-4db8-814d-b9ff21dccd67",
        "rows": [
         [
          "False",
@@ -543,7 +543,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "c7cce619",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
        "Length: 467, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "c5dfe9ec",
    "metadata": {},
    "outputs": [
@@ -613,7 +613,7 @@
          "type": "integer"
         }
        ],
-       "ref": "adac6287-bfb4-4d24-97f0-e90e834bf2fe",
+       "ref": "d0996b0c-6e7d-4d9c-be8e-a01cb702098d",
        "rows": [
         [
          "False",
@@ -631,7 +631,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "5f580765",
    "metadata": {},
    "outputs": [
@@ -665,246 +665,388 @@
          "type": "integer"
         },
         {
+         "name": "periodo",
+         "rawType": "datetime64[ns]",
+         "type": "datetime"
+        },
+        {
          "name": "valor",
          "rawType": "float64",
          "type": "float"
         }
        ],
-       "ref": "8ac2d67e-0410-4b12-9b25-1743c856bc0f",
+       "ref": "781e0e64-ab56-4978-ac1a-c7662873d99f",
        "rows": [
         [
          "0",
+         "1986-08-01 00:00:00",
          "2.57"
         ],
         [
          "1",
+         "1986-09-01 00:00:00",
          "2.94"
         ],
         [
          "2",
+         "1986-10-01 00:00:00",
          "1.96"
         ],
         [
          "3",
+         "1986-11-01 00:00:00",
          "2.37"
         ],
         [
          "4",
+         "1986-12-01 00:00:00",
          "5.47"
         ],
         [
          "5",
+         "1987-01-01 00:00:00",
          "11.0"
         ],
         [
          "6",
+         "1987-02-01 00:00:00",
          "19.61"
         ],
         [
          "7",
+         "1987-03-01 00:00:00",
          "11.95"
         ],
         [
          "8",
+         "1987-04-01 00:00:00",
          "15.3"
         ],
         [
          "9",
+         "1987-05-01 00:00:00",
          "24.63"
         ],
         [
          "10",
+         "1987-06-01 00:00:00",
          "18.02"
         ],
         [
          "11",
+         "1987-07-01 00:00:00",
          "8.91"
         ],
         [
          "12",
+         "1987-08-01 00:00:00",
          "8.09"
         ],
         [
          "13",
+         "1987-09-01 00:00:00",
          "7.99"
         ],
         [
          "14",
+         "1987-10-01 00:00:00",
          "9.45"
         ],
         [
          "15",
+         "1987-11-01 00:00:00",
          "12.92"
         ],
         [
          "16",
+         "1987-12-01 00:00:00",
          "14.38"
         ],
         [
          "17",
+         "1988-01-01 00:00:00",
          "16.78"
         ],
         [
          "18",
+         "1988-02-01 00:00:00",
          "18.35"
         ],
         [
          "19",
+         "1988-03-01 00:00:00",
          "16.59"
         ],
         [
          "20",
+         "1988-04-01 00:00:00",
          "20.25"
         ],
         [
          "21",
+         "1988-05-01 00:00:00",
          "18.65"
         ],
         [
          "22",
+         "1988-06-01 00:00:00",
          "20.17"
         ],
         [
          "23",
+         "1988-07-01 00:00:00",
          "24.69"
         ],
         [
          "24",
+         "1988-08-01 00:00:00",
          "22.63"
         ],
         [
          "25",
+         "1988-09-01 00:00:00",
          "26.25"
         ],
         [
          "26",
+         "1988-10-01 00:00:00",
          "29.79"
         ],
         [
          "27",
+         "1988-11-01 00:00:00",
          "28.41"
         ],
         [
          "28",
+         "1988-12-01 00:00:00",
          "30.24"
         ],
         [
          "29",
+         "1989-01-01 00:00:00",
          "22.97"
         ],
         [
          "30",
+         "1989-02-01 00:00:00",
          "18.95"
         ],
         [
          "31",
+         "1989-03-01 00:00:00",
          "20.41"
         ],
         [
          "32",
+         "1989-04-01 00:00:00",
          "11.52"
         ],
         [
          "33",
+         "1989-05-01 00:00:00",
          "11.43"
         ],
         [
          "34",
+         "1989-06-01 00:00:00",
          "27.29"
         ],
         [
          "35",
+         "1989-07-01 00:00:00",
          "33.15"
         ],
         [
          "36",
+         "1989-08-01 00:00:00",
          "35.49"
         ],
         [
          "37",
+         "1989-09-01 00:00:00",
          "38.58"
         ],
         [
          "38",
+         "1989-10-01 00:00:00",
          "47.7"
         ],
         [
          "39",
+         "1989-11-01 00:00:00",
          "48.41"
         ],
         [
          "40",
+         "1989-12-01 00:00:00",
          "64.21"
         ],
         [
          "41",
+         "1990-01-01 00:00:00",
          "67.6"
         ],
         [
          "42",
+         "1990-02-01 00:00:00",
          "82.04"
         ],
         [
          "43",
+         "1990-03-01 00:00:00",
          "36.76"
         ],
         [
          "44",
+         "1990-04-01 00:00:00",
          "4.23"
         ],
         [
          "45",
+         "1990-05-01 00:00:00",
          "5.69"
         ],
         [
          "46",
+         "1990-06-01 00:00:00",
          "8.73"
         ],
         [
          "47",
+         "1990-07-01 00:00:00",
          "13.79"
         ],
         [
          "48",
+         "1990-08-01 00:00:00",
          "11.53"
         ],
         [
          "49",
+         "1990-09-01 00:00:00",
          "15.21"
         ]
        ],
        "shape": {
-        "columns": 1,
+        "columns": 2,
         "rows": 467
        }
       },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>periodo</th>\n",
+       "      <th>valor</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1986-08-01</td>\n",
+       "      <td>2.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1986-09-01</td>\n",
+       "      <td>2.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1986-10-01</td>\n",
+       "      <td>1.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1986-11-01</td>\n",
+       "      <td>2.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1986-12-01</td>\n",
+       "      <td>5.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>462</th>\n",
+       "      <td>2025-02-01</td>\n",
+       "      <td>0.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>463</th>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>0.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>464</th>\n",
+       "      <td>2025-04-01</td>\n",
+       "      <td>1.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>465</th>\n",
+       "      <td>2025-05-01</td>\n",
+       "      <td>1.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>466</th>\n",
+       "      <td>2025-06-01</td>\n",
+       "      <td>0.54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>467 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0      2.57\n",
-       "1      2.94\n",
-       "2      1.96\n",
-       "3      2.37\n",
-       "4      5.47\n",
-       "       ... \n",
-       "462    0.99\n",
-       "463    0.96\n",
-       "464    1.06\n",
-       "465    1.14\n",
-       "466    0.54\n",
-       "Name: valor, Length: 467, dtype: float64"
+       "       periodo  valor\n",
+       "0   1986-08-01   2.57\n",
+       "1   1986-09-01   2.94\n",
+       "2   1986-10-01   1.96\n",
+       "3   1986-11-01   2.37\n",
+       "4   1986-12-01   5.47\n",
+       "..         ...    ...\n",
+       "462 2025-02-01   0.99\n",
+       "463 2025-03-01   0.96\n",
+       "464 2025-04-01   1.06\n",
+       "465 2025-05-01   1.14\n",
+       "466 2025-06-01   0.54\n",
+       "\n",
+       "[467 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['valor'].astype(float)"
+    "df['valor'] = df['valor'].astype(float)\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "id": "308f6bd9",
    "metadata": {},
    "outputs": [
@@ -943,7 +1085,7 @@
        "        0.36,  0.43,  0.44,  0.83,  1.14,  1.01])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "id": "4398a4c5",
    "metadata": {},
    "outputs": [
@@ -973,7 +1115,7 @@
          "type": "integer"
         }
        ],
-       "ref": "d21d6e88-3893-482c-9254-71b369231b99",
+       "ref": "87356d0e-15b8-4222-89a8-ee58c77787d9",
        "rows": [
         [
          "False",
@@ -991,7 +1133,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "id": "3766a593",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "id": "137051c3",
    "metadata": {},
    "outputs": [],
